//
// Copyright (c) Peter Vrenken. All rights reserved. See the license in https://github.com/vrenken/EtAlii.Ubigia
syntax = "proto3";
import "Data/Clients/_Grpc/_Model.proto";
package EtAlii.Ubigia.Api.Transport.Grpc.WireProtocol;

// The Content Grpc service definition.
service ContentGrpcService
{
	rpc Get (ContentGetRequest) returns (ContentGetResponse) {}
	rpc GetPart (ContentPartGetRequest) returns (ContentPartGetResponse) {}
	rpc Post (ContentPostRequest) returns (ContentPostResponse) {}
	rpc PostPart (ContentPartPostRequest) returns (ContentPartPostResponse) {}
}

message ContentGetRequest
{
	Identifier EntryId = 1;
}

message ContentGetResponse
{
	Content Content = 1;
}

message ContentPartGetRequest
{
	Identifier EntryId = 1;
	fixed64 ContentPartId = 2;
}

message ContentPartGetResponse
{
	ContentPart ContentPart = 1;
}


message ContentPostRequest
{
	Identifier EntryId = 1;
	Content Content = 2;
}

message ContentPostResponse
{
}

message ContentPartPostRequest
{
	Identifier EntryId = 1;
	fixed64 ContentPartId = 2;
	ContentPart ContentPart = 3;
}

message ContentPartPostResponse
{
}

